--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -18,8 +18,8 @@ jobs:
       - name: Train model
         run: |
           # Your ML workflow goes here
-          pip install -r requirements.txt
-          python train.py
+          sudo pip install -r requirements.txt
+          sudo python train.py
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
